--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
         "friendsofphp/php-cs-fixer": "^2.15",
         "mockery/mockery": "^1.2",
         "sensiolabs-de/deptrac-shim": "^0.5.0",
