--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -14,9 +14,9 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
-            Projections:
+            Domain:
                 is_bundle: false
                 type: xml
                 dir: '%kernel.project_dir%/config/mapping/orm'
-                prefix: 'App\Infrastructure'
-                alias: Projections
+                prefix: 'App\Domain\Entity'
+                alias: Domain
