--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,6 +9,16 @@ doctrine:
             collate: utf8mb4_unicode_ci
 
         url: '%env(resolve:DATABASE_URL)%'
+        types:
+            awardedAt:    App\Infrastructure\Doctrine\Type\AwardedAtType
+            redeemedAt:   App\Infrastructure\Doctrine\Type\RedeemedAtType
+            clientName:   App\Infrastructure\Doctrine\Type\ClientNameType
+            pharmacyName: App\Infrastructure\Doctrine\Type\PharmacyNameType
+        mapping_types:
+            awardedAt:    datetime
+            redeemedAt:   datetime
+            clientName:   string
+            pharmacyName: string
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
