--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,6 +34,15 @@ services:
 
 
 
+
+    ### Infrastructure
+
+    App\Infrastructure\Symfony\EventSubscriber\ExceptionSubscriber:
+        tags:
+            - { name: 'kernel.event_listener', event: 'kernel.exception' }
+
+
+
     # UI
 
     App\UI\Http\ApiRest\Controller\:
