--- a/.env
+++ b/.env
@@ -13,6 +13,15 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+###> Docker environment ###
+APP=pharma-credits
+TIMEZONE=Europe/Madrid
+MYSQL_ROOT_PASSWORD=root
+MYSQL_PORT=33060
+NGINX_PORT=8080
+ADMINER_PORT=8081
+###< Docker environment ###
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=1d944de1a7d737a084e83e9bd2edfecc
@@ -24,5 +33,5 @@ APP_SECRET=1d944de1a7d737a084e83e9bd2edfecc
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/pharma_credits
+DATABASE_URL=mysql://root:root@mysql:3306/pharma_points
 ###< doctrine/doctrine-bundle ###
