--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -21,3 +21,8 @@ monolog:
             handler: deprecation
             max_level: info
             channels: ["php"]
+        domain_event:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.pharmacy-point-event.log"
+            level: info
+            channels: ["pharmacy-point-event"]
