--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,6 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    domain_event_subscribers_dir: '%kernel.project_dir%/config/events/subscribers.yml'
 
 services:
     # default configuration for services in *this* file
@@ -13,10 +12,8 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
         bind:
-            $queryBus:        '@tactician.commandbus.query'
-            $commandBus:      '@tactician.commandbus.command'
-            $writeModel:      '@App\Infrastructure\Doctrine\Model\WriteModel'
-            $writeModelEvent: '@App\Infrastructure\Doctrine\Model\WriteModelEvent'
+            $queryBus:   '@tactician.commandbus.query'
+            $commandBus: '@tactician.commandbus.command'
 
     _instanceof:
         App\Application\Command\CommandHandlerInterface:
@@ -29,18 +26,17 @@ services:
             tags:
                 - { name: tactician.handler, typehints: true, bus: query }
 
+        App\Infrastructure\EventSubscriber\InitializeSubscribers:
+            calls:
+                - { method: loadSubscriber, arguments: ['@App\Infrastructure\EventSubscriber\LogEventSubscriber'] }
+                - { method: loadSubscriber, arguments: ['@App\Infrastructure\EventSubscriber\PersistEntityByEventSubscriber'] }
+
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
         exclude: '../src/**/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-
-    ### Domain
-
-    App\Infrastructure\EventSubscriber\LogEventSubscriber:
-        tags:
-            - {name: monolog.logger, channel: pharmacy-point-event }
 
 
 
@@ -50,10 +46,10 @@ services:
         tags:
             - { name: 'kernel.event_listener', event: 'kernel.exception' }
 
-    App\Infrastructure\EventSubscriber\InitializeSubscribers:
-        autoconfigure: true
-        arguments:
-            $configFile: '%domain_event_subscribers_dir%'
+    App\Infrastructure\EventSubscriber\LogEventSubscriber:
+        tags:
+            - {name: monolog.logger, channel: pharmacy-point-event }
+
 
 
     # UI
