--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,10 @@ services:
       dockerfile: docker/Dockerfile
       args:
         TIMEZONE: ${TIMEZONE}
+        USER: ${USER}
+        USER_NAME: ${USER_NAME}
+        USER_EMAIL: ${USER_EMAIL}
+        USER_ID: ${USER_ID}
     volumes:
       - ./:/var/www/app
       - ./var/log:/var/www/app/var/log
