Externalize deamon/services as Mysql

--- a/.env.dist
+++ b/.env.dist
@@ -16,16 +16,15 @@
 ###> Docker environment ###
 APP=pharma-credits
 TIMEZONE=Europe/Madrid
+# External docker network
+EXTERNAL_NET=mynet
 # User
 USER=yourname
 USER_ID=1000
 USER_NAME="Your Git Name"
 USER_EMAIL=name@domain.com
 # Service
-MYSQL_ROOT_PASSWORD=root
-MYSQL_PORT=3306
 NGINX_PORT=8080
-ADMINER_PORT=8081
 # Xdebug
 XDEBUG_REMOTE_HOST=192.168.0.1     # Run in your shell: ip route
 XDEBUG_REMOTE_PORT=9000
