--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
 version:  '3'
 
-services:
-  mysql:
-    container_name: mysql-pharma
-    image: mysql:8.0
-    command: ["--default-authentication-plugin=mysql_native_password"]
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    ports:
-      - ${MYSQL_PORT}:3306
+networks:
+  default:
+    external:
+      name: ${EXTERNAL_NET}
 
+services:
   web:
     restart: on-failure
     build:
@@ -37,9 +33,3 @@ services:
       - ${NGINX_PORT}:80
     depends_on:
       - web
-
-  adminer:
-    container_name: adminer-pharma
-    image: adminer
-    ports:
-      - ${ADMINER_PORT}:8080
