--- a/composer.json
+++ b/composer.json
@@ -19,30 +19,30 @@
         "ext-json": "*",
         "beberlei/assert": "^3.2",
         "league/tactician-bundle": "^1.1",
-        "nelmio/api-doc-bundle": "^3.4",
-        "ramsey/uuid": "^3.8",
+        "nelmio/api-doc-bundle": "^3.5",
+        "ramsey/uuid": "^3.9",
         "ramsey/uuid-doctrine": "^1.5",
-        "sensio/framework-extra-bundle": "^5.4",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.3.*",
+        "sensio/framework-extra-bundle": "^5.5",
+        "symfony/asset": "^4.4",
+        "symfony/console": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/flex": "^1.6",
+        "symfony/framework-bundle": "^4.4",
         "symfony/orm-pack": "^1.0",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/twig-bundle": "^4.4",
+        "symfony/yaml": "^4.4"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.2",
-        "friendsofphp/php-cs-fixer": "^2.15",
-        "mockery/mockery": "^1.2",
-        "sensiolabs-de/deptrac-shim": "^0.5.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "mockery/mockery": "^1.3",
+        "sensiolabs-de/deptrac-shim": "^0.5",
         "symfony/debug-pack": "^1.0",
-        "symfony/phpunit-bridge": "^4.3",
-        "symfony/var-dumper": "4.3.*",
-        "symfony/web-server-bundle": "4.3.*"
+        "symfony/phpunit-bridge": "^4.4",
+        "symfony/var-dumper": "4.4.*"
     },
     "config": {
+        "bin-dir": "bin",
         "preferred-install": {
             "*": "dist"
         },
@@ -69,7 +69,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -84,7 +84,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "4.3.*"
+            "require": "4.4.*"
         }
     }
 }
